Z-Index fix
Header now has its own z-index. Now  CSS :After elements will now  be behind the header.

--- a/CSS_WebStyle/WebStyle.css
+++ b/CSS_WebStyle/WebStyle.css
@@ -100,13 +100,16 @@ body {
     position: sticky;
     top: 0;
 
-    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
 
     min-height: 100px;
 
 
     overflow: hidden;
+
+
 }
 
 .Header h1 {
